WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316180
[YARR] Fix NonGreedy backtracking
https://bugs.webkit.org/show_bug.cgi?id=316180
Summary
[YARR] Fix NonGreedy backtracking
Yusuke Suzuki
Reported
2026-06-02 23:13:47 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-02 23:13:55 PDT
<
rdar://problem/178590766
>
Yusuke Suzuki
Comment 2
2026-06-02 23:15:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66345
EWS
Comment 3
2026-06-03 16:32:12 PDT
Committed
314506@main
(95d80761e676): <
https://commits.webkit.org/314506@main
> Reviewed commits have been landed. Closing PR #66345 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug